[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-graeae"
version = "0.1.0"
description = "GRAEAE multi-muse consult engine — extracted from mnemos monorepo (namespace pkg on mnemos-core)"
requires-python = ">=3.11"
dependencies = ["mnemos-core", "httpx"]

[tool.setuptools.packages.find]
include = ["mnemos*"]
namespaces = true
